// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rewards Widget when there are no rewards displays no rewards dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-55 MuiButton-root-26 MuiButton-outlined-31 makeStyles-rewardsButton-18 makeStyles-rewards-17 makeStyles-button-20"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-27"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-19"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-60 MuiBox-root-61"
        >
          <p
            class="MuiTypography-root-62 MuiTypography-body2-63"
          >
            $0
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-135"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-102"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-147"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-105 MuiDialog-scrollPaper-103"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-149 MuiDialog-paper-106 MuiDialog-paperScrollPaper-107 MuiDialog-paperWidthSm-111 makeStyles-noRewardsDialog-98 MuiDialog-paperFullWidth-115 MuiPaper-elevation24-176 MuiPaper-rounded-150"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-177 makeStyles-title-92"
        >
          <h2
            class="MuiTypography-root-62 MuiTypography-h6-72"
          >
            My Claimable Rewards
            <button
              aria-label="go back to rewards"
              class="MuiButtonBase-root-55 MuiIconButton-root-178 makeStyles-closeButton-94"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-186"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-187"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-135"
              />
            </button>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-196 makeStyles-content-93"
        >
          <div
            class="MuiGrid-root-198 makeStyles-noRewardsContent-99 MuiGrid-container-199 MuiGrid-spacing-xs-2-222"
          >
            <div
              class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-item-200 MuiGrid-direction-xs-column-202 MuiGrid-grid-xs-12-244 MuiGrid-grid-sm-6-252"
            >
              <div
                class="MuiGrid-root-198 MuiGrid-item-200"
              >
                <div
                  class="MuiBox-root-60 MuiBox-root-301"
                >
                  <img
                    class="makeStyles-noRewardsIcon-100"
                    src="/assets/icons/no-rewards-icon.svg"
                  />
                  <div
                    class="MuiBox-root-60 MuiBox-root-304"
                  >
                    <p
                      class="MuiTypography-root-62 MuiTypography-body1-64"
                    >
                      $0.00
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root-198 makeStyles-noRewardsExplanation-101 MuiGrid-item-200"
              >
                <div
                  class="MuiGrid-root-198 MuiGrid-item-200"
                >
                  <p
                    class="MuiTypography-root-62 MuiTypography-body1-64"
                  >
                    Receive maximum rewards when: 
                  </p>
                </div>
                <div
                  class="MuiGrid-root-198 MuiGrid-item-200"
                >
                  <ul
                    class="makeStyles-rewardsOptions-97"
                  >
                    <li>
                      <p
                        class="MuiTypography-root-62 MuiTypography-body2-63"
                      >
                        Staking 50% non native tokens
                      </p>
                    </li>
                    <li>
                      <p
                        class="MuiTypography-root-62 MuiTypography-body2-63"
                      >
                        Holding and/or Staking 50% BadgerDAO tokens
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-198 MuiGrid-item-200 MuiGrid-grid-xs-12-244 MuiGrid-grid-sm-6-252"
            >
              <div
                class="MuiGrid-root-198 makeStyles-userGuideToken-96 MuiGrid-item-200"
              >
                <p
                  class="MuiTypography-root-62 MuiTypography-body2-63 MuiTypography-colorTextSecondary-88"
                >
                  BADGERDAO TOKENS:
                </p>
                <p
                  class="MuiTypography-root-62 MuiTypography-body1-64"
                >
                  Badger, bBadger, Digg, bDigg
                </p>
              </div>
              <div
                class="MuiGrid-root-198 makeStyles-userGuideToken-96 MuiGrid-item-200"
              >
                <p
                  class="MuiTypography-root-62 MuiTypography-body2-63 MuiTypography-colorTextSecondary-88"
                >
                  NON NATIVE TOKENS:
                </p>
                <p
                  class="MuiTypography-root-62 MuiTypography-body1-64"
                >
                  bBTC, renBTC, oBTC...
                </p>
              </div>
              <div
                class="MuiGrid-root-198 makeStyles-userGuideToken-96 MuiGrid-item-200"
              >
                <p
                  class="MuiTypography-root-62 MuiTypography-body2-63 MuiTypography-colorTextSecondary-88"
                >
                  INDEPENDENT TOKENS:
                </p>
                <p
                  class="MuiTypography-root-62 MuiTypography-body1-64"
                >
                  CVX, bveCVX...
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are no rewards displays zero amount in rewards button 1`] = `
<div>
  <button
    aria-label="open rewards dialog"
    class="MuiButtonBase-root-55 MuiButton-root-26 MuiButton-outlined-31 makeStyles-rewardsButton-18 makeStyles-rewards-17 makeStyles-button-20"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-27"
    >
      <img
        alt="rewards icon"
        class="makeStyles-rewardsIcon-19"
        src="/assets/icons/rewards-spark.svg"
      />
      <div
        class="MuiBox-root-60 MuiBox-root-61"
      >
        <p
          class="MuiTypography-root-62 MuiTypography-body2-63"
        >
          $0
        </p>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root-135"
    />
  </button>
</div>
`;

exports[`Rewards Widget when there are rewards can display user guide 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-55 MuiButton-root-26 MuiButton-outlined-31 makeStyles-rewardsButton-18 makeStyles-rewards-17 makeStyles-button-20"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-27"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-19"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-60 MuiBox-root-61"
        >
          <p
            class="MuiTypography-root-62 MuiTypography-body2-63"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-135"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-102"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-147"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-105 MuiDialog-scrollPaper-103"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-149 MuiDialog-paper-106 MuiDialog-paperScrollPaper-107 MuiDialog-paperWidthSm-111 makeStyles-dialog-117 MuiDialog-paperFullWidth-115 MuiPaper-elevation24-176 MuiPaper-rounded-150"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-177 makeStyles-title-118"
        >
          <h2
            class="MuiTypography-root-62 MuiTypography-h6-72"
          >
            <div
              class="MuiBox-root-60 MuiBox-root-346"
            >
              <button
                aria-label="exit guide mode"
                class="MuiButtonBase-root-55 MuiIconButton-root-178 makeStyles-arrowBack-129"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-186"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-187"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17.51 3.87L15.73 2.1 5.84 12l9.9 9.9 1.77-1.77L9.38 12l8.13-8.13z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-135"
                />
              </button>
              Rewards User Guide
            </div>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-196 makeStyles-content-119"
        >
          <div
            class="MuiGrid-root-198 MuiGrid-container-199"
          >
            <div
              class="MuiGrid-root-198 makeStyles-userGuideTokens-130 MuiGrid-container-199 MuiGrid-item-200 MuiGrid-direction-xs-column-202 MuiGrid-grid-xs-12-244 MuiGrid-grid-sm-4-250"
            >
              <div
                class="MuiGrid-root-198 makeStyles-userGuideToken-131 MuiGrid-item-200"
              >
                <p
                  class="MuiTypography-root-62 MuiTypography-body2-63 MuiTypography-colorTextSecondary-88"
                >
                  BADGERDAO TOKENS:
                </p>
                <p
                  class="MuiTypography-root-62 MuiTypography-body1-64"
                >
                  Badger, bBadger, Digg, bDigg
                </p>
              </div>
              <div
                class="MuiGrid-root-198 makeStyles-userGuideToken-131 MuiGrid-item-200"
              >
                <p
                  class="MuiTypography-root-62 MuiTypography-body2-63 MuiTypography-colorTextSecondary-88"
                >
                  NON NATIVE TOKENS:
                </p>
                <p
                  class="MuiTypography-root-62 MuiTypography-body1-64"
                >
                  bBTC, renBTC, oBTC...
                </p>
              </div>
              <div
                class="MuiGrid-root-198 makeStyles-userGuideToken-131 MuiGrid-item-200"
              >
                <p
                  class="MuiTypography-root-62 MuiTypography-body2-63 MuiTypography-colorTextSecondary-88"
                >
                  INDEPENDENT TOKENS:
                </p>
                <p
                  class="MuiTypography-root-62 MuiTypography-body1-64"
                >
                  CVX, bveCVX...
                </p>
              </div>
            </div>
            <div
              class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-item-200 MuiGrid-direction-xs-column-202 MuiGrid-grid-xs-12-244 MuiGrid-grid-sm-true-246"
            >
              <div
                class="MuiGrid-root-198 MuiGrid-item-200"
              >
                <p
                  class="MuiTypography-root-62 MuiTypography-body1-64"
                >
                  Receive maximum rewards when: 
                </p>
              </div>
              <div
                class="MuiGrid-root-198 MuiGrid-item-200"
              >
                <ul
                  class="makeStyles-rewardsOptions-132"
                >
                  <li>
                    <p
                      class="MuiTypography-root-62 MuiTypography-body2-63"
                    >
                      Staking 50% non native tokens
                    </p>
                  </li>
                  <li>
                    <p
                      class="MuiTypography-root-62 MuiTypography-body2-63"
                    >
                      Holding and/or Staking 50% BadgerDAO tokens
                    </p>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are rewards can go back from user guide 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-55 MuiButton-root-26 MuiButton-outlined-31 makeStyles-rewardsButton-18 makeStyles-rewards-17 makeStyles-button-20"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-27"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-19"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-60 MuiBox-root-61"
        >
          <p
            class="MuiTypography-root-62 MuiTypography-body2-63"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-135"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-102"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-147"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-105 MuiDialog-scrollPaper-103"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-149 MuiDialog-paper-106 MuiDialog-paperScrollPaper-107 MuiDialog-paperWidthSm-111 makeStyles-dialog-117 MuiDialog-paperFullWidth-115 MuiPaper-elevation24-176 MuiPaper-rounded-150"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-177 makeStyles-title-118"
        >
          <h2
            class="MuiTypography-root-62 MuiTypography-h6-72"
          >
            My Claimable Rewards
            <button
              class="MuiButtonBase-root-55 MuiIconButton-root-178 makeStyles-closeButton-120"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-186"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-187"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-135"
              />
            </button>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-196 makeStyles-content-119"
        >
          <div
            class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-spacing-xs-3-223"
          >
            <div
              class="MuiGrid-root-198 MuiGrid-item-200 MuiGrid-grid-xs-12-244 MuiGrid-grid-sm-6-252"
            >
              <div
                class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-direction-xs-column-202"
              >
                <div
                  class="MuiGrid-root-198 makeStyles-claimRow-121 MuiGrid-item-200"
                >
                  <div
                    class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-justify-xs-space-between-218"
                  >
                    <label
                      class="MuiFormControlLabel-root-348"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root-55 MuiIconButton-root-178 PrivateSwitchBase-root-360 MuiCheckbox-root-354 MuiCheckbox-colorPrimary-358 PrivateSwitchBase-checked-361 MuiCheckbox-checked-355 MuiIconButton-colorPrimary-182"
                      >
                        <span
                          class="MuiIconButton-label-186"
                        >
                          <input
                            checked=""
                            class="PrivateSwitchBase-input-363"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-187"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root-135"
                        />
                      </span>
                      <span
                        class="MuiTypography-root-62 MuiFormControlLabel-label-353 MuiTypography-body1-64"
                      >
                        <p
                          class="MuiTypography-root-62 MuiTypography-body2-63"
                        >
                          BADGER
                        </p>
                      </span>
                    </label>
                    <div
                      class="MuiBox-root-60 MuiBox-root-364"
                    >
                      <h6
                        class="MuiTypography-root-62 MuiTypography-h6-72"
                      >
                        0.02802
                      </h6>
                      <div
                        class="makeStyles-currencyContainer-347"
                      >
                        <div
                          class="MuiBox-root-60 MuiBox-root-367"
                        >
                          <p
                            class="MuiTypography-root-62 MuiTypography-body2-63 MuiTypography-colorTextSecondary-88"
                          >
                            $3.40513
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-198 makeStyles-claimRow-121 MuiGrid-item-200"
                >
                  <div
                    class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-justify-xs-space-between-218"
                  >
                    <label
                      class="MuiFormControlLabel-root-348"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root-55 MuiIconButton-root-178 PrivateSwitchBase-root-360 MuiCheckbox-root-354 MuiCheckbox-colorPrimary-358 PrivateSwitchBase-checked-361 MuiCheckbox-checked-355 MuiIconButton-colorPrimary-182"
                      >
                        <span
                          class="MuiIconButton-label-186"
                        >
                          <input
                            checked=""
                            class="PrivateSwitchBase-input-363"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-187"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root-135"
                        />
                      </span>
                      <span
                        class="MuiTypography-root-62 MuiFormControlLabel-label-353 MuiTypography-body1-64"
                      >
                        <p
                          class="MuiTypography-root-62 MuiTypography-body2-63"
                        >
                          bveCVX
                        </p>
                      </span>
                    </label>
                    <div
                      class="MuiBox-root-60 MuiBox-root-368"
                    >
                      <h6
                        class="MuiTypography-root-62 MuiTypography-h6-72"
                      >
                        0.02453
                      </h6>
                      <div
                        class="makeStyles-currencyContainer-347"
                      >
                        <div
                          class="MuiBox-root-60 MuiBox-root-371"
                        >
                          <p
                            class="MuiTypography-root-62 MuiTypography-body2-63 MuiTypography-colorTextSecondary-88"
                          >
                            $2.60968
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-198 makeStyles-claimRow-121 MuiGrid-item-200"
                >
                  <div
                    class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-justify-xs-space-between-218"
                  >
                    <label
                      class="MuiFormControlLabel-root-348"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root-55 MuiIconButton-root-178 PrivateSwitchBase-root-360 MuiCheckbox-root-354 MuiCheckbox-colorPrimary-358 PrivateSwitchBase-checked-361 MuiCheckbox-checked-355 MuiIconButton-colorPrimary-182"
                      >
                        <span
                          class="MuiIconButton-label-186"
                        >
                          <input
                            checked=""
                            class="PrivateSwitchBase-input-363"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-187"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root-135"
                        />
                      </span>
                      <span
                        class="MuiTypography-root-62 MuiFormControlLabel-label-353 MuiTypography-body1-64"
                      >
                        <p
                          class="MuiTypography-root-62 MuiTypography-body2-63"
                        >
                          bCVXCRV
                        </p>
                      </span>
                    </label>
                    <div
                      class="MuiBox-root-60 MuiBox-root-372"
                    >
                      <h6
                        class="MuiTypography-root-62 MuiTypography-h6-72"
                      >
                        0.03989
                      </h6>
                      <div
                        class="makeStyles-currencyContainer-347"
                      >
                        <div
                          class="MuiBox-root-60 MuiBox-root-375"
                        >
                          <p
                            class="MuiTypography-root-62 MuiTypography-body2-63 MuiTypography-colorTextSecondary-88"
                          >
                            $6.90143
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root-376 makeStyles-divider-122"
                />
                <div
                  class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-item-200 MuiGrid-align-items-xs-center-207 MuiGrid-justify-xs-space-between-218"
                >
                  <p
                    class="MuiTypography-root-62 MuiTypography-body2-63"
                  >
                    Total Claimable Rewards
                  </p>
                  <div
                    class="MuiBox-root-60 MuiBox-root-385"
                  >
                    <h6
                      class="MuiTypography-root-62 MuiTypography-h6-72"
                    >
                      $12.92
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-198 makeStyles-submitButton-123 MuiGrid-item-200"
                >
                  <button
                    class="MuiButtonBase-root-55 MuiButton-root-26 MuiButton-contained-34 MuiButton-containedPrimary-35 MuiButton-fullWidth-49"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-27"
                    >
                      Claim My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-135"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-198 MuiGrid-item-200 MuiGrid-grid-xs-12-244 MuiGrid-grid-sm-6-252"
            >
              <div
                class="MuiGrid-root-198 makeStyles-moreRewardsInformation-124 MuiGrid-container-199 MuiGrid-direction-xs-column-202"
              >
                <div
                  class="MuiGrid-root-198 MuiGrid-item-200"
                >
                  <h6
                    class="MuiTypography-root-62 MuiTypography-h6-72"
                  >
                    Want more rewards ?
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-198 makeStyles-moreRewardsDescription-125 MuiGrid-item-200"
                >
                  <p
                    class="MuiTypography-root-62 MuiTypography-body2-63"
                  >
                    Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                  </p>
                </div>
                <div
                  class="MuiGrid-root-198 makeStyles-boostRewards-126 MuiGrid-item-200"
                >
                  <button
                    class="MuiButtonBase-root-55 MuiButton-root-26 MuiButton-outlined-31 MuiButton-outlinedPrimary-32 MuiButton-fullWidth-49"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-27"
                    >
                      Boost My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-135"
                    />
                  </button>
                </div>
                <div
                  class="MuiGrid-root-198 makeStyles-rewardsGuideLinkContainer-127 MuiGrid-item-200"
                >
                  <a
                    class="MuiTypography-root-62 MuiLink-root-386 MuiLink-underlineHover-388 makeStyles-cursorPointer-128 MuiTypography-colorPrimary-85"
                  >
                    Rewards User Guide
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are rewards displays claim options 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-55 MuiButton-root-26 MuiButton-outlined-31 makeStyles-rewardsButton-18 makeStyles-rewards-17 makeStyles-button-20"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-27"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-19"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-60 MuiBox-root-61"
        >
          <p
            class="MuiTypography-root-62 MuiTypography-body2-63"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-135"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-102"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-147"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-105 MuiDialog-scrollPaper-103"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-149 MuiDialog-paper-106 MuiDialog-paperScrollPaper-107 MuiDialog-paperWidthSm-111 makeStyles-dialog-117 MuiDialog-paperFullWidth-115 MuiPaper-elevation24-176 MuiPaper-rounded-150"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-177 makeStyles-title-118"
        >
          <h2
            class="MuiTypography-root-62 MuiTypography-h6-72"
          >
            My Claimable Rewards
            <button
              class="MuiButtonBase-root-55 MuiIconButton-root-178 makeStyles-closeButton-120"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-186"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-187"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-135"
              />
            </button>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-196 makeStyles-content-119"
        >
          <div
            class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-spacing-xs-3-223"
          >
            <div
              class="MuiGrid-root-198 MuiGrid-item-200 MuiGrid-grid-xs-12-244 MuiGrid-grid-sm-6-252"
            >
              <div
                class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-direction-xs-column-202"
              >
                <div
                  class="MuiGrid-root-198 makeStyles-claimRow-121 MuiGrid-item-200"
                >
                  <div
                    class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-justify-xs-space-between-218"
                  >
                    <label
                      class="MuiFormControlLabel-root-302"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root-55 MuiIconButton-root-178 PrivateSwitchBase-root-314 MuiCheckbox-root-308 MuiCheckbox-colorPrimary-312 PrivateSwitchBase-checked-315 MuiCheckbox-checked-309 MuiIconButton-colorPrimary-182"
                      >
                        <span
                          class="MuiIconButton-label-186"
                        >
                          <input
                            checked=""
                            class="PrivateSwitchBase-input-317"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-187"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root-135"
                        />
                      </span>
                      <span
                        class="MuiTypography-root-62 MuiFormControlLabel-label-307 MuiTypography-body1-64"
                      >
                        <p
                          class="MuiTypography-root-62 MuiTypography-body2-63"
                        >
                          BADGER
                        </p>
                      </span>
                    </label>
                    <div
                      class="MuiBox-root-60 MuiBox-root-318"
                    >
                      <h6
                        class="MuiTypography-root-62 MuiTypography-h6-72"
                      >
                        0.02802
                      </h6>
                      <div
                        class="makeStyles-currencyContainer-301"
                      >
                        <div
                          class="MuiBox-root-60 MuiBox-root-321"
                        >
                          <p
                            class="MuiTypography-root-62 MuiTypography-body2-63 MuiTypography-colorTextSecondary-88"
                          >
                            $3.40513
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-198 makeStyles-claimRow-121 MuiGrid-item-200"
                >
                  <div
                    class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-justify-xs-space-between-218"
                  >
                    <label
                      class="MuiFormControlLabel-root-302"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root-55 MuiIconButton-root-178 PrivateSwitchBase-root-314 MuiCheckbox-root-308 MuiCheckbox-colorPrimary-312 PrivateSwitchBase-checked-315 MuiCheckbox-checked-309 MuiIconButton-colorPrimary-182"
                      >
                        <span
                          class="MuiIconButton-label-186"
                        >
                          <input
                            checked=""
                            class="PrivateSwitchBase-input-317"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-187"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root-135"
                        />
                      </span>
                      <span
                        class="MuiTypography-root-62 MuiFormControlLabel-label-307 MuiTypography-body1-64"
                      >
                        <p
                          class="MuiTypography-root-62 MuiTypography-body2-63"
                        >
                          bveCVX
                        </p>
                      </span>
                    </label>
                    <div
                      class="MuiBox-root-60 MuiBox-root-322"
                    >
                      <h6
                        class="MuiTypography-root-62 MuiTypography-h6-72"
                      >
                        0.02453
                      </h6>
                      <div
                        class="makeStyles-currencyContainer-301"
                      >
                        <div
                          class="MuiBox-root-60 MuiBox-root-325"
                        >
                          <p
                            class="MuiTypography-root-62 MuiTypography-body2-63 MuiTypography-colorTextSecondary-88"
                          >
                            $2.60968
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-198 makeStyles-claimRow-121 MuiGrid-item-200"
                >
                  <div
                    class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-justify-xs-space-between-218"
                  >
                    <label
                      class="MuiFormControlLabel-root-302"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root-55 MuiIconButton-root-178 PrivateSwitchBase-root-314 MuiCheckbox-root-308 MuiCheckbox-colorPrimary-312 PrivateSwitchBase-checked-315 MuiCheckbox-checked-309 MuiIconButton-colorPrimary-182"
                      >
                        <span
                          class="MuiIconButton-label-186"
                        >
                          <input
                            checked=""
                            class="PrivateSwitchBase-input-317"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-187"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root-135"
                        />
                      </span>
                      <span
                        class="MuiTypography-root-62 MuiFormControlLabel-label-307 MuiTypography-body1-64"
                      >
                        <p
                          class="MuiTypography-root-62 MuiTypography-body2-63"
                        >
                          bCVXCRV
                        </p>
                      </span>
                    </label>
                    <div
                      class="MuiBox-root-60 MuiBox-root-326"
                    >
                      <h6
                        class="MuiTypography-root-62 MuiTypography-h6-72"
                      >
                        0.03989
                      </h6>
                      <div
                        class="makeStyles-currencyContainer-301"
                      >
                        <div
                          class="MuiBox-root-60 MuiBox-root-329"
                        >
                          <p
                            class="MuiTypography-root-62 MuiTypography-body2-63 MuiTypography-colorTextSecondary-88"
                          >
                            $6.90143
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root-330 makeStyles-divider-122"
                />
                <div
                  class="MuiGrid-root-198 MuiGrid-container-199 MuiGrid-item-200 MuiGrid-align-items-xs-center-207 MuiGrid-justify-xs-space-between-218"
                >
                  <p
                    class="MuiTypography-root-62 MuiTypography-body2-63"
                  >
                    Total Claimable Rewards
                  </p>
                  <div
                    class="MuiBox-root-60 MuiBox-root-339"
                  >
                    <h6
                      class="MuiTypography-root-62 MuiTypography-h6-72"
                    >
                      $12.92
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-198 makeStyles-submitButton-123 MuiGrid-item-200"
                >
                  <button
                    class="MuiButtonBase-root-55 MuiButton-root-26 MuiButton-contained-34 MuiButton-containedPrimary-35 MuiButton-fullWidth-49"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-27"
                    >
                      Claim My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-135"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-198 MuiGrid-item-200 MuiGrid-grid-xs-12-244 MuiGrid-grid-sm-6-252"
            >
              <div
                class="MuiGrid-root-198 makeStyles-moreRewardsInformation-124 MuiGrid-container-199 MuiGrid-direction-xs-column-202"
              >
                <div
                  class="MuiGrid-root-198 MuiGrid-item-200"
                >
                  <h6
                    class="MuiTypography-root-62 MuiTypography-h6-72"
                  >
                    Want more rewards ?
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-198 makeStyles-moreRewardsDescription-125 MuiGrid-item-200"
                >
                  <p
                    class="MuiTypography-root-62 MuiTypography-body2-63"
                  >
                    Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                  </p>
                </div>
                <div
                  class="MuiGrid-root-198 makeStyles-boostRewards-126 MuiGrid-item-200"
                >
                  <button
                    class="MuiButtonBase-root-55 MuiButton-root-26 MuiButton-outlined-31 MuiButton-outlinedPrimary-32 MuiButton-fullWidth-49"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-27"
                    >
                      Boost My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-135"
                    />
                  </button>
                </div>
                <div
                  class="MuiGrid-root-198 makeStyles-rewardsGuideLinkContainer-127 MuiGrid-item-200"
                >
                  <a
                    class="MuiTypography-root-62 MuiLink-root-340 MuiLink-underlineHover-342 makeStyles-cursorPointer-128 MuiTypography-colorPrimary-85"
                  >
                    Rewards User Guide
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are rewards displays rewards amount in rewards button 1`] = `
<div>
  <button
    aria-label="open rewards dialog"
    class="MuiButtonBase-root-55 MuiButton-root-26 MuiButton-outlined-31 makeStyles-rewardsButton-18 makeStyles-rewards-17 makeStyles-button-20"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-27"
    >
      <img
        alt="rewards icon"
        class="makeStyles-rewardsIcon-19"
        src="/assets/icons/rewards-spark.svg"
      />
      <div
        class="MuiBox-root-60 MuiBox-root-61"
      >
        <p
          class="MuiTypography-root-62 MuiTypography-body2-63"
        >
          $12.92
        </p>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root-135"
    />
  </button>
</div>
`;
